# token2metrics

./: .gitignore  LICENSE  README.md  README_FRAMEWORK.md  __init__.py  apply_license.py  demo.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md  decode.md  prefill.md
config/: __init__.py  common.py
configs/: __init__.py  l1max_qwen_1_5b.py  llama_8b.py  qwen_14b.py  qwen_1_5b.py
decodenergy/: __init__.py  empirical_data.py  generate_lookup_table.py  run.sh
decodenergy/energy/: README.md  aggregate.py  analysis.py  cli.py  correlate.py  energy.py  insights.py  summary.py  utils.py
decodenergy/energy/fitting/: __init__.py  cli.py  energy_fits.py  model_fits.py  power_fits.py
decodenergy/energy/visualization/: __init__.py  base.py  charts.py  individual_plots.py
decodetokens/: __init__.py  list.py  main.py
decodetokens/latency/: main.py  plot.sh
general/energy/: README.md  aggregate.py  cli.py  correlate.py  energy.py  insights.py  summary.py  utils.py
general/energy/fitting/: cli.py  energy_fits.py  model_fits.py  power_fits.py
general/energy/visualization/: base.py  charts.py  debug_plots.py  individual_plots.py
general/energy_results/: energy_performance_correlation.xlsx
general/results/fitting/: fitting_summary.json
planner/: Makefile  README.md  __init__.py  analysis.py  compare.py  main.py  requirements.txt  setup.sh
planner/config/: __init__.py  settings.py  utils.py
planner/plots/: __init__.py  accuracy.py  cli.py
planner/processing/: __init__.py  coverage.py  merge.py  prune.py  score.py  validate.py
prefillenergy/: __init__.py  generate_lookup_table.py  run.sh
prefillenergy/energy/: README.md  __init__.py  aggregate.py  analysis.py  cli.py  correlate.py  energy.py  insights.py  summary.py  utils.py
prefillenergy/energy/fitting/: __init__.py  cli.py  energy_fits.py  model_fits.py  power_fits.py
prefillenergy/energy/visualization/: __init__.py  base.py  charts.py  debug_plots.py  individual_plots.py
prefillenergy/output/: energy_detailed_results.xlsx  energy_model_summary.xlsx  energy_performance_correlation.xlsx
prefillenergy/output/fitting/: fitting_summary.json
prefillenergy/output_coarse/: energy_detailed_results.xlsx  energy_model_summary.xlsx  energy_performance_correlation.xlsx  power_insights.xlsx
prefillenergy/output_coarse/fitting/: fitting_summary.json
prefilltokens/: __init__.py  extract.py  extract_padding.py  fit.py  fit_prefill_quadratic.py  main.py  quad_step.py
prefilltokens/cpu/: main.py
prefilltokens/plots/: fit_parameters_allpoints.json
scalingenergy/: README.md  __init__.py  analyze.py  dualx.py  energy_cli.py  export.py  inspect_data.py  plot_energy_results.py  run_energy_analysis.py
scalingenergy/analyzers/: __init__.py  token_analyzer.py
scalingenergy/energy/: __init__.py  analyzer.py  correlator.py  parser.py
scalingenergy/exporters/: __init__.py  excel_exporter.py
scalingenergy/processors/: __init__.py  core_parser.py
scalingenergy/results/energy/: energy_correlations.xlsx
scalingenergy/results/tokens/: DeepSeek-R1-Distill-Llama-8B.xlsx  DeepSeek-R1-Distill-Qwen-1.5B.xlsx  DeepSeek-R1-Distill-Qwen-14B.xlsx  scaling_summary.xlsx
scalingenergy/utils/: __init__.py  data_structures.py
src/: __init__.py
src/core/: __init__.py  config.py  factory.py  interfaces.py
src/data/: loaders.py  processing.py  registry.py
src/modeling/: __init__.py  calibration.py  evaluator.py  linear_regression.py  persistence.py  pipeline.py  polynomial_regression.py  registry.py
src/processors/: token_preprocessor.py
src/utils/: helpers.py  model_summary.py  plotting.py
tests/: test_basic.py  test_config.py
tools/: Llama8b_decode.py  batch_predict_from_token_list.py  extract_8B_input_tokens.py  extract_input_tokens.py  plot.sh  plot_prefill_vs_tokens.py  plot_server_decode_only.py  plot_token_latency.py  raw_process.py
