[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token2metrics"
version = "0.1.0"
description = "Translate tokens to latency/energy metrics for edge inference"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Benjamin Kubwimana", email = "bkubwimana@nvidia.com"},
    {name = "Qijing Huang", email = "jennyhuang@nvidia.com"},
]
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "xgboost>=1.5.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "openpyxl>=3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.2.0",
  "black>=22.0.0",
  "mypy>=0.910",
  "jupyter>=1.0.0"
]

[tool.setuptools]
packages = ["token2metrics"]
package-dir = {"token2metrics" = "."}

[tool.setuptools.package-data]
"token2metrics" = ["**/*"]

[tool.pylint.messages_control]
disable = "all"

[tool.mypy]
ignore_errors = true

[tool.flake8]
ignore = "*"

[tool.pyright]
# Disable type checking (remove red-underlines from Pyright)
#   valid options: "off", "basic", "strict"
#  "basic" for lightweight checks
# checking off entirely.
typeCheckingMode = "off"
# Don’t complain about third-party libraries that lack stub packages
reportMissingTypeStubs = false
# Don’t warn when an import cannot be resolved (e.g. optional dependencies)
reportMissingImports = false
# Skip large data/archival directories from analysis
exclude = ["archive", "datasets"]